# gwsim_signal

./: .ignore_words.txt  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  _typos.toml  cliff.toml  package-lock.json  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  codeql.yml  documentation.yml  publish.yml  publish_testpypi.yml  scheduled_release.yml
docs/: index.md
docs/api/: index.md
docs/api/injection/: index.md
docs/api/multichannel/: index.md
docs/api/network/: index.md
docs/api/pipeline/: index.md
docs/api/projection/: index.md
docs/api/registry/: index.md
docs/api/simulator/: index.md
docs/api/utils/: index.md  log.md
docs/api/waveform/: index.md
docs/dev/: troubleshooting.md
docs/javascripts/: mathjax.js
docs/user_guide/: cli.md  custom-backends.md  custom-detectors.md  detector-projection.md  index.md  installation.md  multi-channel-strains.md  network-config.md  quick_start.md  strain-injection.md  waveform.md
examples/: gw150914_like.json
examples/networks/: et_triangle.yaml  hlvk.yaml
src/gwmock_signal/: __init__.py  __main__.py  detector.py  network.py  pipeline.py  registry.py  simulator.py  version.py
src/gwmock_signal/cli/: __init__.py  inject.py  main.py
src/gwmock_signal/data/: __init__.py
src/gwmock_signal/data/detectors/: __init__.py  et-2l-aligned.yaml  et-2l-misaligned.yaml  et-triangle-emr.yaml  et-triangle-sardinia.yaml
src/gwmock_signal/injection/: __init__.py  core.py
src/gwmock_signal/io/: __init__.py  interferometer_format.py
src/gwmock_signal/multichannel/: __init__.py  stack.py
src/gwmock_signal/projection/: __init__.py  network.py
src/gwmock_signal/utils/: __init__.py  log.py
src/gwmock_signal/waveform/: __init__.py  factory.py  pycbc_wrapper.py
src/gwmock_signal/waveform/backends/: __init__.py  base.py  lal.py  pycbc.py
src/gwsim_signal/: __init__.py  __main__.py  version.py
src/gwsim_signal/cli/: __init__.py  main.py
src/gwsim_signal/utils/: __init__.py  log.py
tests/: smoke_test.py  test_import.py  test_simulator.py  test_simulator_protocol.py
tests/injection/: test_core.py
tests/integration/: __init__.py  test_cbc_pipeline.py
tests/io/: test_interferometer_format.py
tests/multichannel/: test_stack.py
tests/projection/: test_network.py  test_projection_network.py
tests/unit/: test_cli_inject.py  test_detector.py  test_io.py  test_network.py  test_network_file.py  test_network_presets.py  test_pipeline.py
tests/waveform/: test_backends.py  test_pycbc_waveform_wrapper.py  test_waveform_factory.py
