[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gwmock-signal"
authors = [{ name = "Isaac C. F. Wong" }]
description = "A Python package for simulating gravitational wave signals"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"
dynamic = ["version"]
dependencies = [
  "typer>=0.25.0",
  "gwpy>=4.0.1",
  "pycbc>=2.11.0",
  "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
  "bandit[toml]>=1.9.4",
  "ruff>=0.15.12",
  "pre-commit>=4.6.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest-runner>=6.0.1",
  "pytest>=9.0.3",
  "pytest-github-actions-annotate-failures>=0.4.0",
]
docs = ["zensical>=0.0.38", "mkdocstrings-python>=2.0.3"]
build = ["hatch>=1.16.5"]
release = ["git-cliff>=2.13.1"]

[project.scripts]
gwmock-signal = "gwmock_signal.cli.main:app"

[project.urls]
Documentation = "https://leuven-gravity-institute.github.io/gwmock-signal"
Source = "https://github.com/Leuven-Gravity-Institute/gwmock-signal"
Tracker = "https://github.com/Leuven-Gravity-Institute/gwmock-signal/issues"
Home = "https://github.com/Leuven-Gravity-Institute/gwmock-signal"
"Release Notes" = "https://github.com/Leuven-Gravity-Institute/gwmock-signal/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/gwmock_signal"]

[tool.bandit]
exclude_dirs = ["build", "dist", "tests", "scripts"]
number = 4
recursive = true
targets = "src"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 0

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov src --cov-append -m 'not integration' --cov-report=term-missing"
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit2"
markers = [
  "integration: marks as integration test",
  "notebooks: marks as notebook test",
  "gpu: marks as gpu test",
  "spark: marks tests which need Spark",
  "slow: marks tests as slow",
  "unit: fast offline tests",
]

[tool.ruff]
line-length = 120 # Matches Black's default
target-version = "py312" # Align with CI (3.12–3.14) and requires-python (>=3.12)
lint.extend-select = [
  "E",
  "F",
  "W",   # pycodestyle errors and warnings
  "I",   # isort rules
  "UP",  # pyupgrade rules
  "C90", # McCabe complexity
  "N",   # PEP8 naming
  "B",   # Bugbear (opinionated checks)
  "A",   # Flake8-builtins
  "C4",  # Flake8-comprehensions
  "PT",  # Flake8-pytest
  "RUF", # Ruff-specific rules
  "PL",  # Add pylint rules for fuller coverage
  "SIM", # Similarities
  "T10", # Debugger statements
  "DOC", # Docstring
  "D",   # Doc style
]
lint.ignore = [
  "E501", # Line length (handled by formatter)
  "C901", # Disable overly strict complexity checks (optional, adjust as needed)
]
fix = true # Enable autofix
lint.unfixable = [] # List rules that should not be autofixed, if any

[tool.ruff.format]
quote-style = "double"       # Use double quotes for strings
indent-style = "space"       # Use spaces for indentation
docstring-code-format = true # Format code in docstrings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in the tests directory
"tests/*" = ["S101", "ARG001", "PLC0415", "PLR2004"]
# S101: allow assert statements
# ARG001: allow unused function arguments (common in fixtures)
# PLC0415: allow import statements not at the top level
# PLR2004: allow magic values in the unit tests

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
